# scapegoat

./: CONFIG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUTURE_README.md  LICENSE  README.md  README.tpl  build.rs  gen_readme.sh  run_fuzz.sh
.github/workflows/: clippy.yml  no_std.yml  test.yml
benches/: bench_set.rs  bench_set_from.rs  bench_set_rand.rs  bench_set_seq.rs  rtd.rs  test_data.rs
examples/: README.md  ha_insert.rs  search_by_slice.rs  static_strs.rs  tiny_map.rs  try_insert.rs
examples_TODO_RENAME/: README.md  ha_insert.rs  search_by_slice.rs  static_strs.rs  tiny_map.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: sg_arena.rs  sg_map.rs  sg_set.rs
misc/min_size/: Cargo.toml  README.md
misc/min_size/min_size_no_std/: Cargo.toml  rust-toolchain.toml
misc/min_size/min_size_no_std/src/: main.rs
misc/min_size/min_size_std/: Cargo.toml
misc/min_size/min_size_std/.cargo/: config.toml
misc/min_size/min_size_std/src/: main.rs
misc/min_size/src/: main.rs
src/: arena.rs  entry.rs  lib.rs  macros.rs  map.rs  map_structs.rs  map_types.rs  node.rs  scapegoat.rs  set.rs  set_types.rs  tree.rs
src/scapegoat/: iter.rs  test.rs
src/tree/: arena.rs  arena_dispatch.rs  error.rs  iter.rs  mod.rs  node.rs  node_dispatch.rs  test.rs  tree.rs  types.rs
tests/: test_auto_traits.rs  test_map_api.rs  test_set_api.rs  test_traits.rs
