[package]
name = "scapegoat"
version = "1.4.0"
authors = ["Tiemoko Ballo"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tnballo/scapegoat"
repository = "https://github.com/tnballo/scapegoat"
documentation = "https://docs.rs/scapegoat"
keywords = ["scapegoat", "tree", "set", "map", "no_std"]
categories = ["algorithms", "data-structures", "no-std", "embedded"]
description = "Embedded-friendly ordered set and map data structures via an arena-based scapegoat tree."
include = [
    "**/*.rs",
    "**/*.md",
    "**/*.sh",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
smallvec = "1.6.1"  # Has no dependencies of it's own
micromath = "2.0.0" # Has no dependenceis of it's own
smallnum = "0.2.0"  # Has no dependencies of it's own

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
lazy_static = "1"

[features]
high_assurance = []
alt_impl = []

[lib]
name = "scapegoat"
path = "src/lib.rs"

[[bench]]
name = "bench_set"
harness = false
