[package]
name = "scapegoat"
version = "1.6.0"
authors = ["Tiemoko Ballo"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tnballo/scapegoat"
repository = "https://github.com/tnballo/scapegoat"
documentation = "https://docs.rs/scapegoat"
keywords = ["scapegoat", "tree", "set", "map", "no_std"]
categories = ["algorithms", "data-structures", "no-std", "embedded"]
description = "Safe, embedded-friendly ordered set/map via a scapegoat tree."
include = [
    "src/**/*.rs",
    "benches/**/*.rs",
    "build.rs",
    "README.md",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
smallvec = "1.7"  # Has no dependencies of it's own
micromath = "2.0" # Has no dependenceis of it's own
smallnum = "0.2"  # Has no dependencies of it's own

[dev-dependencies]
criterion = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
lazy_static = "1"

[features]
high_assurance = []
alt_impl = []
low_mem_insert = []
fast_rebalance = []

[lib]
name = "scapegoat"
path = "src/lib.rs"

[[bench]]
name = "bench_set_rand"
harness = false

[[bench]]
name = "bench_set_seq"
harness = false

[[bench]]
name = "bench_set_from"
harness = false