cargo-features = ["strip"]

[package]
name = "min_size"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
scapegoat = { path = "../../../scapegoat" }